# lilium-kernel

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  build.sh  clean.sh  debug.sh  gdbstartup.txt  limine.conf  linker-x86_64.ld  run.sh
.cargo/: config.toml
api/: Cargo.toml
api/src/: auxv.rs  helpers.rs  lib.rs  rand.rs
api/src/arch/: x86_64.rs
kernel/: Cargo.toml  build.rs
kernel/src/: apic.rs  interrupt.rs  lib.rs  limine_requests.rs  main.rs  prelude.rs
loader/: Cargo.toml
loader/src/: entry.rs  interrupt.rs  lib.rs  limine_requests.rs  loader.rs  prelude.rs
loader/src/entry/: x86_64.rs
modules/: Cargo.toml
modules/hello-world/: Cargo.toml
modules/hello-world/src/: lib.rs
modules/hello_world/: Cargo.toml
modules/hello_world/src/: lib.rs
modules/lilium-kernel/: Cargo.toml
modules/lilium-kernel/src/: entry.rs  lib.rs
modules/lilium-kernel/src/entry/: x86.rs
src/: framebuffer.rs  interrupt.rs  main.rs  memory.rs  util.rs
targets/: x86_64-pc-lilium-kernel.json  x86_64-pc-lilium-loader.json  x86_64-pc-los-kernel.json
