[package]
name = "lilium-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "5.2.0"
ld-so-impl = { git = "https://github.com/LiliumOS/ld-so-impl.git", features = [
    "deny-wx",
    "tls",
    "entry",
] }
embedded-graphics-core = "0.4.0"
embedded-term = { git = "https://github.com/rdrpenguin04/embedded-term" }
limine = "0.4.0"
los-api = { path = "../api" }
pc-keyboard = "0.8.0"
spin = "0.10.0"
talc = "4.4.2"
x2apic = "0.5.0"
x86_64 = "0.15.2"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 2
debug = true
debug-assertions = false
overflow-checks = false

[profile.release]
opt-level = 3
lto = true
