[package]
name = "lilium-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
ld-so-impl = { path = "ld-so-impl", features = ["deny-wx", "tls", "entry"] }
embedded-graphics-core = "0.4.0"
embedded-term = { git = "https://github.com/rdrpenguin04/embedded-term" }
limine = "0.4.0"
los-api = { path = "../api" }
pc-keyboard = "0.8.0"
spin = "0.10.0"
talc = "4.4.2"
rand_core = "0.9.3"
lc-crypto = { git = "https://github.com/LightningCreations/lc-crypto", version = "0.1.0", features = [
    "runtime-detect",
] }
bytemuck = { version = "1.23", features = [
    "latest_stable_rust",
    "zeroable_unwind_fn",
] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x2apic = "0.5.0"
x86_64 = "0.15.2"
acpi = "5.2.0"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 2
debug = true
debug-assertions = false
overflow-checks = false

[profile.release]
opt-level = 3
lto = true
