[workspace]
members = ["hello_world", "lilium-kernel"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
los-api = { path = "../api" }
lc-crypto = { git = "https://github.com/LightningCreations/lc-crypto", version = "0.1.0" }

[profile.dev]
opt-level = 1

[profile.dev.package.embedded-term]
opt-level = 3
